--- a/index.html
+++ b/index.html
@@ -21,12 +21,53 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Treasure Hunt Game</title>
+    <title>Trivia Game</title>
 </head>
 
 <body>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            Trivia Game Header
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-3'>
+        </div>
+        <div class='col-md-6 text-center'>
+            <p class='questions'>Questions will go here</p>
+        </div>
+        <div class='col-md-3'>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-3'>
+        </div>
+        <div class='col-md-6 text-center'>
+            <p class='answers'>Answers will go here</p>
+        </div>
+        <div class='col-md-3'>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-2'>
+        </div>
+        <div class='col-md-3 text-center'>
+            <p class='wins'>Wins will go here</p>
+        </div>
+        <div class='col-md-2 text-center'>
+                <button type="button" class="btn btn-dark reset">Play Again</button>
+        </div>
+        <div class='col-md-3 text-center'>
+            <p class='losses'>Losses will go here</p>
+        </div>
+        <div class='col-md-2'>
+        </div>
+    </div>
+
+
 
 
     <script src='./game.js'></script>
 </body>
+
 </html>
