added JSON objects and updated HTML

--- a/index.html
+++ b/index.html
@@ -21,20 +21,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Trivia Game</title>
+    <title>Presidential Trivia Game</title>
 </head>
 
 <body>
     <div class='row'>
         <div class='col-md-12 text-center'>
-            Trivia Game Header
+            <img src="./images/PresidentialSeal.jpg" alt='Presidential Seal' height="200" width="200">
+            <h1>Presidential Trivia</h1>
+            <h3>You will have 2 minutes to answer 11 questions about US Presidents.</h3>
+            <h3>How will you do?</h3>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-3'>
+        </div>
+        <div class='col-md-6'>
+            <h3 class='counter'></h3>
+        </div>
+        <div class='col-md-3'>
         </div>
     </div>
     <div class='row'>
         <div class='col-md-3'>
         </div>
         <div class='col-md-6 text-center'>
-            <p class='questions'>Questions will go here</p>
+            <p class='questions'></p>
         </div>
         <div class='col-md-3'>
         </div>
@@ -43,7 +55,7 @@
         <div class='col-md-3'>
         </div>
         <div class='col-md-6 text-center'>
-            <p class='answers'>Answers will go here</p>
+            <p class='answers'></p>
         </div>
         <div class='col-md-3'>
         </div>
@@ -52,15 +64,21 @@
         <div class='col-md-2'>
         </div>
         <div class='col-md-3 text-center'>
-            <p class='wins'>Wins will go here</p>
+            <p>Wins</p>
+            <p class='wins'></p>
         </div>
         <div class='col-md-2 text-center'>
-                <button type="button" class="btn btn-dark reset">Play Again</button>
         </div>
         <div class='col-md-3 text-center'>
-            <p class='losses'>Losses will go here</p>
+            <p>Losses</p>
+            <p class='losses'></p>
         </div>
         <div class='col-md-2'>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <button type="button" class="btn btn-dark reset">Play Again</button>
         </div>
     </div>
 
