--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <div class='container'>
     <div class='row'>
         <div class='col-md-12 text-center'>
             <img src="./images/PresidentialSeal.jpg" alt='Presidential Seal' height="200" width="200">
@@ -36,8 +37,10 @@
     <div class='row'>
         <div class='col-md-3'>
         </div>
-        <div class='col-md-6'>
-            <h3 class='counter'></h3>
+        <div class='col-md-6 text-center'>
+            <h4>You Have:</h4>
+            <h4 class='counter'></h4>
+            <h4>Seconds Remaining</h4>
         </div>
         <div class='col-md-3'>
         </div>
@@ -78,13 +81,13 @@
     </div>
     <div class='row'>
         <div class='col-md-12 text-center'>
-            <button type="button" class="btn btn-dark reset">Play Again</button>
+            <button type="button" class="btn btn-dark play">Start the Game</button>
         </div>
     </div>
 
 
 
-
+</div>
     <script src='./game.js'></script>
 </body>
 
