html sections for questions & javascript for same

--- a/index.html
+++ b/index.html
@@ -25,69 +25,366 @@
 </head>
 
 <body>
+    <div class="modal fade" id="timeUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="timeUpModalTitle">You Lose</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    You ran out of time!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class='container'>
-    <div class='row'>
-        <div class='col-md-12 text-center'>
-            <img src="./images/PresidentialSeal.jpg" alt='Presidential Seal' height="200" width="200">
-            <h1>Presidential Trivia</h1>
-            <h3>You will have 2 minutes to answer 11 questions about US Presidents.</h3>
-            <h3>How will you do?</h3>
+        <div class='row'>
+            <div class='col-md-12 text-center'>
+                <img src="./images/PresidentialSeal.jpg" alt='Presidential Seal' height="200" width="200">
+                <h1>Presidential Trivia</h1>
+                <div class='load display:show'>
+                    <h3>You will have 3 minutes to answer 11 questions about US Presidents.</h3>
+                    <h3>How will you do?</h3>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-3'>
+        <div class='row'>
+            <div class='col-md-3'>
+            </div>
+            <div class='col-md-6 text-center'>
+                <h4>You Have:</h4>
+                <h4 class='counter'></h4>
+                <h4>Seconds Remaining</h4>
+            </div>
+            <div class='col-md-3'>
+            </div>
         </div>
-        <div class='col-md-6 text-center'>
-            <h4>You Have:</h4>
-            <h4 class='counter'></h4>
-            <h4>Seconds Remaining</h4>
+        <div class='q1 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q1questions questions'></p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q1answers'>
+                        <button type="button" class="btn btn-primary question q1btn1"></button>
+                        <button type="button" class="btn btn-primary question q1btn2"></button>
+                        <button type="button" class="btn btn-primary question q1btn3"></button>
+                        <button type="button" class="btn btn-primary question q1btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
         </div>
-        <div class='col-md-3'>
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-3'>
-        </div>
-        <div class='col-md-6 text-center'>
-            <p class='questions'></p>
-        </div>
-        <div class='col-md-3'>
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-3'>
-        </div>
-        <div class='col-md-6 text-center'>
-            <p class='answers'></p>
-        </div>
-        <div class='col-md-3'>
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-2'>
-        </div>
-        <div class='col-md-3 text-center'>
-            <p>Wins</p>
-            <p class='wins'></p>
-        </div>
-        <div class='col-md-2 text-center'>
-        </div>
-        <div class='col-md-3 text-center'>
-            <p>Losses</p>
-            <p class='losses'></p>
-        </div>
-        <div class='col-md-2'>
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-12 text-center'>
-            <button type="button" class="btn btn-dark play">Start the Game</button>
-        </div>
-    </div>
+        <div class='q2 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q2questions questions'>
 
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q2answers'>
+                        <button type="button" class="btn btn-primary question q2btn1"></button>
+                        <button type="button" class="btn btn-primary question q2btn2"></button>
+                        <button type="button" class="btn btn-primary question q2btn3"></button>
+                        <button type="button" class="btn btn-primary question q2btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q3 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q3questions questions'>
 
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q3answers'>
+                            <button type="button" class="btn btn-primary question q3btn1"></button>
+                            <button type="button" class="btn btn-primary question q3btn2"></button>
+                            <button type="button" class="btn btn-primary question q3btn3"></button>
+                            <button type="button" class="btn btn-primary question q3btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q4 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q4questions questions'>
 
-</div>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q4answers'>
+                            <button type="button" class="btn btn-primary question q4btn1"></button>
+                            <button type="button" class="btn btn-primary question q4btn2"></button>
+                            <button type="button" class="btn btn-primary question q4btn3"></button>
+                            <button type="button" class="btn btn-primary question q4btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q5 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q5questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q5answers'>
+                            <button type="button" class="btn btn-primary question q5btn1"></button>
+                            <button type="button" class="btn btn-primary question q5btn2"></button>
+                            <button type="button" class="btn btn-primary question q5btn3"></button>
+                            <button type="button" class="btn btn-primary question q5btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q6 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q6questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q6answers'>
+                            <button type="button" class="btn btn-primary question q6btn1"></button>
+                            <button type="button" class="btn btn-primary question q6btn2"></button>
+                            <button type="button" class="btn btn-primary question q6btn3"></button>
+                            <button type="button" class="btn btn-primary question q6btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q7 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q7questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q7answers'>
+                            <button type="button" class="btn btn-primary question q7btn1"></button>
+                            <button type="button" class="btn btn-primary question q7btn2"></button>
+                            <button type="button" class="btn btn-primary question q7btn3"></button>
+                            <button type="button" class="btn btn-primary question q7btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q8 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q8questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q8answers'>
+                            <button type="button" class="btn btn-primary question q8btn1"></button>
+                            <button type="button" class="btn btn-primary question q8btn2"></button>
+                            <button type="button" class="btn btn-primary question q8btn3"></button>
+                            <button type="button" class="btn btn-primary question q8btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q9 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q9questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q9answers'>
+                            <button type="button" class="btn btn-primary question q9btn1"></button>
+                            <button type="button" class="btn btn-primary question q9btn2"></button>
+                            <button type="button" class="btn btn-primary question q9btn3"></button>
+                            <button type="button" class="btn btn-primary question q9btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q10 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q10questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q10answers'>
+                            <button type="button" class="btn btn-primary question q10btn1"></button>
+                            <button type="button" class="btn btn-primary question q10btn2"></button>
+                            <button type="button" class="btn btn-primary question q10btn3"></button>
+                            <button type="button" class="btn btn-primary question q10btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='q11 hide'>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q11questions questions'>
+
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-3'>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <p class='q11answers'>
+                            <button type="button" class="btn btn-primary question q11btn1"></button>
+                            <button type="button" class="btn btn-primary question q11btn2"></button>
+                            <button type="button" class="btn btn-primary question q11btn3"></button>
+                            <button type="button" class="btn btn-primary question q11btn4"></button>
+                    </p>
+                </div>
+                <div class='col-md-3'>
+                </div>
+            </div>
+        </div>
+        <div class='endDisplay hide'>
+            <div class='row'>
+                <div class='col-md-2'>
+                </div>
+                <div class='col-md-3 text-center'>
+                    <p>Correct Answers</p>
+                    <p class='wins'></p>
+                </div>
+                <div class='col-md-2 text-center'>
+                </div>
+                <div class='col-md-3 text-center'>
+                    <p>Incorrect Answersx</p>
+                    <p class='losses'></p>
+                </div>
+                <div class='col-md-2'>
+                </div>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-12 text-center load'>
+                <button type="button" class="btn btn-dark play">Start the Game</button>
+            </div>
+        </div>
+    </div>
     <script src='./game.js'></script>
 </body>
 
